# kalmanPresentation

./: CMakeLists.txt  README.md  doxygen_config  drawable.h  filters.cpp  filters.h  ini_parser.cpp  ini_parser.h  kalman.tex  kalman_silent.mkv  main.cpp  models.cpp  models.h  options.ini  simulation.cpp  simulation.h  simulationWindow.cpp  simulationWindow.h
slides/: extraEkfSlides.tex  kalman.tex
source/: CMakeLists.txt  drawable.h  filters.cpp  filters.h  ini_parser.h  main.cpp  models.cpp  models.h  simulation.cpp  simulation.h  simulationWindow.cpp  simulationWindow.h
source/res/: options.ini  simulation.glade
